--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li> Web development</li>
             <li> Programming </li>
             <li> Product design</li>
+            <li> Database Expert</li>
         </ul>
         </div>
 </div>
